--- a/src/main/ch2_services.tex
+++ b/src/main/ch2_services.tex
@@ -1,149 +1,10 @@
-\documentclass[pdftex,11pt,a4paper]{article} % or extarticle
+\section{Services}
+\label{ch:services}
 
-% *** PERSONAL & PAPER INFO ***
-\newcommand{\sAuthors}{Artem Chirkin, Lukas Treyer}
-\newcommand{\sTitle}{Luci planning scenario guidelines}
-\newcommand{\sSubject}{\sTitle}
-\newcommand{\sKeywords}{Luci, middleware, json, geojson, planning}
-
-% *** ACRONYMS ***
-\usepackage{acronym}
-%\acrodef{label}[acronym]{written out form}
-\acrodef{Luci}{Lightweight Urban Computation Interchange}
-
-% ----------------------------------------------------------------------------
-% *** METADATA & TITLE ***
-\usepackage[pdfauthor={\sAuthors},
-            pdftitle={\sTitle},
-            pdfsubject={\sSubject},
-            pdfkeywords={\sKeywords},
-            pdfproducer={Latex with hyperref},
-            pdfcreator={pdflatex}]{hyperref}
-\author{\sAuthors}
-\title{\sTitle}
-
-% *** GRAPHICS RELATED PACKAGES ***
-\usepackage[pdftex]{graphicx}
-\usepackage{epstopdf}
-\usepackage{wrapfig}
-\usepackage{subcaption}
-\graphicspath{{resources/}}
-
-% *** MATH PACKAGES ***
-\usepackage{amsfonts}
-\usepackage[cmex10]{amsmath}
-% *** PDF, URL AND HYPERLINK PACKAGES ***
-\usepackage{url}
-
-% *** PAGE DIMENSIONS ***
-\usepackage{geometry}
-\geometry{top=1.0in, bottom=1.0in, left=1.0in, right=1.0in}
-%\usepackage[section]{placeins} % force images to be within sections
-\usepackage{parskip} % nicer indents in paragraphs
-\usepackage{indentfirst} % add indent at first paragraph of the section
-
-% making possible to execute arbitrary comands within the document
-% \usepackage{bashful}
-% \begingroup\makeatletter\endlinechar=\m@ne\everyeof{\noexpand}
-% \edef\x{\endgroup\def\noexpand\TeXpath{\@@input|"ls ~/Documents" }}\x
-
-% *** COMMENTING ***
-\usepackage[table]{xcolor}
-\newcommand{\comment}[1]{{\color{red} #1 }}
-
-% *** JAVASCRIPT LISTINGS ***
-
-\usepackage{listings}
-\definecolor{lightgray}{rgb}{.98,.98,.98}
-\definecolor{darkgray}{rgb}{.4,.4,.4}
-\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
-
-\lstdefinelanguage{JSON}{
-  keywords={string,long,jsonGeometry,boolean,any,object,number},
-  keywordstyle=\color{blue}\bfseries,
-  ndkeywords={OPT, XOR, MANY},
-  ndkeywordstyle=\color{darkgray}\bfseries,
-  identifierstyle=\color{black},
-  sensitive=false,
-  comment=[l]{//},
-  morecomment=[s]{/*}{*/},
-  commentstyle=\color{purple}\ttfamily,
-  stringstyle=\color{red}\ttfamily,
-  morestring=[b]',
-  morestring=[b]"
-}
-
-\lstset{
-   language=JSON,
-   backgroundcolor=\color{lightgray},
-   extendedchars=true,
-   basicstyle=\footnotesize\ttfamily,
-   showstringspaces=false,
-   showspaces=false,
-   numbers=left,
-   numberstyle=\footnotesize\color{darkgray},
-   numbersep=9pt,
-   tabsize=2,
-   breaklines=true,
-   showtabs=false,
-   captionpos=b
-}
-
-
-% *** DOCUMENT STARTS ***
-\begin{document}
-\maketitle
-% up here was the title, the document content starts here
-% ----------------------------------------------------------------------------
-
-
-\section{Introduction}
-
-\ac{Luci} uses GeoJSON format to represent scenario geometry.
-The format declares geometry information syntax, but does not declare consistent naming and geometry type mappings for \ac{Luci} scenario entities, such as buildings, roads, etc.
-This document aims at providing guidelines on usage of \ac{Luci} scenarios in \ac{Luci} clients and services.
-
-Current document may have not up-to-date action syntax specification.
-In order to get the most recent specification one can use ``generate specification'' \ac{Luci} command.
-This document is not intended to be a replacement to that feature.
-
-The structure of the document is organized as follows:
-Section~\ref{sec:editing} gives an information how to participate in editing of the current document.
-Section~\ref{sec:actions} explains the syntax of \ac{Luci} actions with some commentaries.
-Section~\ref{sec:scenario} is the main informational part of the document: it discusses the conventions used between \ac{Luci} and its services.
-
-\section{Editing and understanding the document}
-\label{sec:editing}
-
-The document source resides in git repository \url{https://bitbucket.org/treyerl/lucy.git},
-the \texttt{.tex} file is \path{spec/lpsg/LPS-guidelines.tex}, compiled with \texttt{texlive} \texttt{pdflatex} tool.
-
-The document contains a number of JSON or GeoJSON listings representing content of \ac{Luci} actions.
-In the listings we use the following coloring scheme:
-%
-\begin{itemize}
-\item Key names are shown in black (e.g. \texttt{action});
-\item Reserved keywords, such as value types are shown in blue (e.g. \texttt{\color{blue}string});
-\item Fixed strings constants are shown in red (e.g. \texttt{\color{red}"create\_scenario"});
-\item Additional structural keywords are shown in grey
-(e.g. \texttt{\color{darkgray}OPT} means the key-value pair is optional, \texttt{\color{darkgray}XOR} before several key-value pairs means exactly one alternative).
-\item Comments are in purple, separated by double slash (e.g. \texttt{\color{purple}// comment})
-\end{itemize}
-%
-If there is a missing reserved keyword, you can add it into tex file annotation (\texttt{keywords} or \texttt{ndkeywords} lists in \texttt{lstdefinelanguage} command).
-
-\paragraph{A note on jsonGeometry data type}
-The word \texttt{geometry} in \ac{Luci} specification has two different meanings.
-On the one hand it is a name of the key that occurs from time to time in \ac{Luci} actions.
-On the other hand it is a name of a pre-defined data type that represents scenario geometry in JSON format.
-To resolve this ambiguity, in current document we use word \texttt{geometry} to represent the name of the key, and \texttt{\color{blue}jsonGeometry} to represent the data type.
-This differentiation does not introduce any changes to the existing JSON messages.
-
-\section{\acs{Luci} scenario actions}
-\label{sec:actions}
+\subsection{\acs{Luci} scenario actions}
+\label{sec:services:actions}
 
 % {"name":"shp_file_test","action":"create_scenario","geometry":{"anl.dbf":{"format":"dbf","attributeMap":{"geomid":"objectid","timestampformat":"YYYY","timestamp":"yearofchan"},"streaminfo":{"checksum":"48AC6C5CD751A525778A144EB66727","length":3138,"order":2}},"anl.shp":{"format":"shp","streaminfo":{"checksum":"39FBD5108DED0FF5637721A4820C484","length":1444,"order":1}},"anl.shx":{"format":"shx","streaminfo":{"checksum":"6B6F93D87FB73FF1AB92C3BD2938D2C","length":484,"order":3}}}}
-
 
 To send geometry to \ac{Luci}, we wrap it in the structure that is shown in listing~\ref{json:geometry}.
 Special type \texttt{\color{blue}jsonGeometry} wraps various types of geometry processed by \ac{Luci}.
@@ -255,8 +116,8 @@ and get the geometry from the scenario at given time.
 }
 \end{lstlisting}
 
-\section{Scenario GeoJSON geometry}
-\label{sec:scenario}
+\subsection{Scenario GeoJSON geometry}
+\label{sec:services:scenario}
 
 Although GeoJSON specification provides all necessary geometry primitives,
 we need a more structured convention to define one-to-one mapping between the geometry and scenario entities.
@@ -270,14 +131,15 @@ The providers are encouraged to add these rules into section~\ref{sec:appru}.
 By an agreement in our team some of the rules go up from section~\ref{sec:appru} to section~\ref{sec:convenru}.
 In case of wide usage they might be enforced in \ac{Luci}, thus moving one step up to section~\ref{sec:standardru}.
 
-\subsection{Standardized rules}
-\label{sec:standardru}
+\subsubsection{Standardized rules}
+\label{sec:services:standardru}
+
 
 Object \texttt{geometry} in listing~\ref{json:geometry} is assumed to be of type \texttt{FeatureCollection}.
 Every entity is represented as a \texttt{Feature} inside that collection, and has a property \texttt{geomID:\color{blue}long} that is given by a client or \ac{Luci} (if the client omits the property).
 
-\subsection{Conventional rules}
-\label{sec:convenru}
+\subsubsection{Conventional rules}
+\label{sec:services:convenru}
 
 Some services require 3D objects, others use only 2D footprints.
 To distinguish these two types of geometry, we agreed on using \texttt{Feature} property \texttt{layer}.
@@ -291,15 +153,11 @@ To be processed correctly by \ac{Luci} services, the footprint requires property
 \end{itemize}
 
 
-\subsection{Per-application rules}
-\label{sec:appru}
-
+\subsubsection{Per-application rules}
+\label{sec:services:appru}
 
 \paragraph{Web geometry modeler}
 The application distinguishes dynamic and static geometry:
 dynamic geometry can be edited, static geometry is only used for evaluation and visualization.
 Thus, I propose an optional property \texttt{static:\color{blue}boolean}.
 Absence of a property implies \texttt{static:\color{brown}false}.
-
-% ----------------------------------------------------------------------------
-\end{document}
