Added binary message format.

--- a/src/main/ch2_services.tex
+++ b/src/main/ch2_services.tex
@@ -161,3 +161,5 @@ The application distinguishes dynamic and static geometry:
 dynamic geometry can be edited, static geometry is only used for evaluation and visualization.
 Thus, I propose an optional property \texttt{static:\color{blue}boolean}.
 Absence of a property implies \texttt{static:\color{brown}false}.
+
+\clearpage
