--- a/src/specification.tex
+++ b/src/specification.tex
@@ -27,6 +27,7 @@
 \usepackage{epstopdf}
 \usepackage{wrapfig}
 \usepackage{subcaption}
+\usepackage{bytefield}
 \graphicspath{{resources/}}
 
 % *** MATH PACKAGES ***
