Changed minor formatting issue.

--- a/src/main/ch1_luci.tex
+++ b/src/main/ch1_luci.tex
@@ -31,14 +31,14 @@ In the current state, service actions are delegated to a free computing service 
       \bitbox{8}{N}\\
       \bitbox{8}{$y_1$}\\
       \begin{rightwordgroup}{$y_1$ byte}
-        \wordbox{2}{Payload 1}
+        \wordbox{2}{Payload $1$}
       \end{rightwordgroup}\\
       \wordbox[lrt]{1}{} \\
       \skippedwords \\
       \wordbox[lrb]{1}{} \\
       \bitbox{8}{$y_N$}\\
       \begin{rightwordgroup}{$y_N$ byte}
-        \wordbox{2}{Payload N}
+        \wordbox{2}{Payload $N$}
       \end{rightwordgroup}
     \end{leftwordgroup}
   \end{bytefield}
