Restructured some more.

--- a/src/main/ch1_luci.tex
+++ b/src/main/ch1_luci.tex
@@ -18,30 +18,10 @@ All communication in Luci is performed through a single broker, namely, the Luci
 In the current state, service actions are delegated to a free computing service meeting the client-specified requirements. If there are no free computing services, the scheduler will [...]?
 
 \subsection{Low-Level Protocol}
+
 \begin{figure}[h!]
   \centering
-  \begin{bytefield}[endianness=big,rightcurlyspace=-1ex]{8}
-    \bitheader{0-7} \\
-    \bitbox{8}{$x$} \\
-    \bitbox{8}{$y$}\\
-    \begin{rightwordgroup}{$x$ byte}
-      \wordbox{3}{Header}
-    \end{rightwordgroup}\\
-    \begin{leftwordgroup}{$y$ byte}
-      \bitbox{8}{N}\\
-      \bitbox{8}{$y_1$}\\
-      \begin{rightwordgroup}{$y_1$ byte}
-        \wordbox{2}{Payload $1$}
-      \end{rightwordgroup}\\
-      \wordbox[lrt]{1}{} \\
-      \skippedwords \\
-      \wordbox[lrb]{1}{} \\
-      \bitbox{8}{$y_N$}\\
-      \begin{rightwordgroup}{$y_N$ byte}
-        \wordbox{2}{Payload $N$}
-      \end{rightwordgroup}
-    \end{leftwordgroup}
-  \end{bytefield}
+  \includegraphics{bin/assets/binary-message-format.pdf}
   \caption{LC2 Message}
   \label{fig:lc2binary}
 \end{figure}
