--- a/src/specification.tex
+++ b/src/specification.tex
@@ -28,6 +28,7 @@
 \usepackage{wrapfig}
 \usepackage{subcaption}
 \usepackage{bytefield}
+\usepackage{msc}
 \graphicspath{{resources/}}
 
 % *** MATH PACKAGES ***
@@ -49,7 +50,7 @@
 % \edef\x{\endgroup\def\noexpand\TeXpath{\@@input|"ls ~/Documents" }}\x
 
 % *** COMMENTING ***
-\usepackage[table]{xcolor}
+%\usepackage[table]{xcolor}
 \newcommand{\comment}[1]{{\color{red} #1 }}
 
 % *** JAVASCRIPT LISTINGS ***
