--- a/src/main/ch0_introduction.tex
+++ b/src/main/ch0_introduction.tex
@@ -1,9 +1,10 @@
 \section{Introduction}
+LUCI2 can be perceived as an IaaS provider, mediating between clients and *cloud* services for computational architecture analysis. Like most IaaS providers Luci's services fall into three different categories: ==storage==, ==networking== and ==computing==. We will broadly outline the main purpose of these functional units within the LC2 framework.
 
-\ac{Luci} uses GeoJSON format to represent scenario geometry.
-The format declares geometry information syntax, but does not declare consistent naming and geometry type mappings for \ac{Luci} scenario entities, such as buildings, roads, etc.
-This document aims at providing guidelines on usage of \ac{Luci} scenarios in \ac{Luci} clients and services.
+\subsection{Notes}
+The words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" are used in accordance to \href{https://www.ietf.org/rfc/rfc2119.txt}{RFC2119}.
 
+\subsection{Understanding the document}
 Current document may have not up-to-date action syntax specification.
 In order to get the most recent specification one can use ``generate specification'' \ac{Luci} command.
 This document is not intended to be a replacement to that feature.
@@ -32,12 +33,5 @@ In the listings we use the following coloring scheme:
 \end{itemize}
 %
 If there is a missing reserved keyword, you can add it into tex file annotation (\texttt{keywords} or \texttt{ndkeywords} lists in \texttt{lstdefinelanguage} command).
-
-\paragraph{A note on jsonGeometry data type}
-The word \texttt{geometry} in \ac{Luci} specification has two different meanings.
-On the one hand it is a name of the key that occurs from time to time in \ac{Luci} actions.
-On the other hand it is a name of a pre-defined data type that represents scenario geometry in JSON format.
-To resolve this ambiguity, in current document we use word \texttt{geometry} to represent the name of the key, and \texttt{\color{blue}jsonGeometry} to represent the data type.
-This differentiation does not introduce any changes to the existing JSON messages.
 
 \clearpage
