--- a/src/specification.tex
+++ b/src/specification.tex
@@ -91,6 +91,20 @@
    captionpos=b
 }
 
+\usepackage{enumitem}
+\setlistdepth{9}
+
+\setlist[itemize,1]{label=$\bullet$}
+\setlist[itemize,2]{label=$\bullet$}
+\setlist[itemize,3]{label=$\bullet$}
+\setlist[itemize,4]{label=$\bullet$}
+\setlist[itemize,5]{label=$\bullet$}
+\setlist[itemize,6]{label=$\bullet$}
+\setlist[itemize,7]{label=$\bullet$}
+\setlist[itemize,8]{label=$\bullet$}
+\setlist[itemize,9]{label=$\bullet$}
+
+\renewlist{itemize}{itemize}{9}
 
 % *** DOCUMENT STARTS ***
 \begin{document}
@@ -101,6 +115,7 @@
   \item 2016-08-05: First draft
 \end{itemize}
 \clearpage
+
 
 % up here was the title, the document content starts here
 % ----------------------------------------------------------------------------
