Added Service API.

--- a/src/main/ch0_introduction.tex
+++ b/src/main/ch0_introduction.tex
@@ -1,24 +1,12 @@
 \section{Introduction}
-LUCI2 can be perceived as an IaaS provider, mediating between clients and *cloud* services for computational architecture analysis. Like most IaaS providers Luci's services fall into three different categories: ==storage==, ==networking== and ==computing==. We will broadly outline the main purpose of these functional units within the LC2 framework.
 
 \subsection{Notes}
 The words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" are used in accordance to \href{https://www.ietf.org/rfc/rfc2119.txt}{RFC2119}.
 
 \subsection{Understanding the document}
-Current document may have not up-to-date action syntax specification.
-In order to get the most recent specification one can use ``generate specification'' \ac{Luci} command.
-This document is not intended to be a replacement to that feature.
 
-The structure of the document is organized as follows:
-Section~\ref{sec:editing} gives an information how to participate in editing of the current document.
-Section~\ref{sec:actions} explains the syntax of \ac{Luci} actions with some commentaries.
-Section~\ref{sec:scenario} is the main informational part of the document: it discusses the conventions used between \ac{Luci} and its services.
-
-\subsection{Editing and understanding the document}
+\subsection{Editing the document}
 \label{sec:editing}
-
-The document source resides in git repository \url{https://bitbucket.org/treyerl/lucy.git},
-the \texttt{.tex} file is \path{spec/lpsg/LPS-guidelines.tex}, compiled with \texttt{texlive} \texttt{pdflatex} tool.
 
 The document contains a number of JSON or GeoJSON listings representing content of \ac{Luci} actions.
 In the listings we use the following coloring scheme:
