--- a/src/scripts/templates/service.tex
+++ b/src/scripts/templates/service.tex
@@ -3,13 +3,14 @@
 
 ((* for service in services *))
 \subsection{((( service )))}
+\label{ch:builtinservices:((( service )))}
 ((( services[service]["description"]|escape_tex )))
 \subsubsection*{Inputs:}
 \begin{itemize}
   ((* for input in services[service]["inputs"] *))
-  \item \textbf{((( input["name"]|escape_tex )))}: ((( input["comment"]|escape_tex )))
+  \item \textbf{((( input["name"]|escape_tex)))}: ((( input["comment"]|escape_tex )))
 \begin{lstlisting}
-(((input["json"])))
+(((input["json"]|replace("\"", "") )))
 \end{lstlisting}
   ((* endfor *))
 \end{itemize}
@@ -19,7 +20,7 @@
   ((* for output in services[service]["outputs"] *))
   \item \textbf{((( output["name"]|escape_tex )))}: ((( output["comment"]|escape_tex )))
 \begin{lstlisting}
-(((output["json"])))
+(((output["json"]|replace("\"", "") )))
 \end{lstlisting}
   ((* endfor *))
 \end{itemize}
