--- a/src/scripts/templates/service.tex
+++ b/src/scripts/templates/service.tex
@@ -1,7 +1,7 @@
 \section{Built-In Services}
 \label{ch:builtinservices}
 
-((* for service in services *))
+((* for service in services|sort *))
 \subsection{((( service )))}
 \label{ch:builtinservices:((( service )))}
 ((( services[service]["description"]|escape_tex )))
