--- a/src/specification.tex
+++ b/src/specification.tex
@@ -122,7 +122,7 @@
 
 \input{src/main/ch0_introduction.tex}
 \input{src/main/ch1_serviceapi.tex}
-%\input{src/main/ch2_networking.tex}
+\input{src/main/ch2_networking.tex}
 \input{src/main/ch3_scenarios.tex}
 \input{src/main/ch4_quacompliance.tex}
 
