--- a/src/specification.tex
+++ b/src/specification.tex
@@ -43,6 +43,7 @@
 %\usepackage[section]{placeins} % force images to be within sections
 \usepackage{parskip} % nicer indents in paragraphs
 \usepackage{indentfirst} % add indent at first paragraph of the section
+\usepackage{paralist} % denser lists
 
 % making possible to execute arbitrary comands within the document
 % \usepackage{bashful}
