--- a/src/scripts/templates/service.tex
+++ b/src/scripts/templates/service.tex
@@ -7,6 +7,7 @@
 ((( services[service]["description"]|escape_tex )))
 \subsubsection*{Inputs:}
 \begin{itemize}
+  \small
   ((* for input in services[service]["inputs"] *))
   \item \textbf{((( input["name"]|escape_tex)))}: ((( input["comment"]|escape_tex )))
 \begin{lstlisting}
@@ -14,9 +15,9 @@
 \end{lstlisting}
   ((* endfor *))
 \end{itemize}
-
 \subsubsection*{Outputs:}
 \begin{itemize}
+  \small
   ((* for output in services[service]["outputs"] *))
   \item \textbf{((( output["name"]|escape_tex )))}: ((( output["comment"]|escape_tex )))
 \begin{lstlisting}
